lista comandos git

--- a/webti/web.html
+++ b/webti/web.html
@@ -8,6 +8,22 @@
 <h1> Página </h1>
 
 
+<h2> lsita de comandos do git</h2>
+
+<ul>
+
+<li> git init - cria um repositorio em uma pasta vazia</li>
+<li> git add - adiciona modificações do wk no <i> stage</i></li>
+<li>git status - mostra o estado atual dos repositórios, modificações, arquivos versionados</li>
+<li> git commit - cria um commit no repositorio LOCAL</li>
+<li> git pushi - envia modificações do repositorio LOCAL para o remoto</li>
+<li> git log - exibe no terminal os <i>commits </i> do repositorio na branch atual </li>
+<li> git log --online --all - exibe todos os commits de forma resumida</li>
+<li> git branch - lista de branches no repositorio</li>
+<li>git checkout - muda de branch </li>
+<li> git checkout -b <nome-da-branch> - cria e muda para uma nova branch</li>
+
+</ul>
     </body>
 
    </head>
