correção erro gramático simples

--- a/webti/web.html
+++ b/webti/web.html
@@ -16,7 +16,7 @@
 <li> git add - adiciona modificações do wk no <i> stage</i></li>
 <li>git status - mostra o estado atual dos repositórios, modificações, arquivos versionados</li>
 <li> git commit - cria um commit no repositorio LOCAL</li>
-<li> git pushi - envia modificações do repositorio LOCAL para o remoto</li>
+<li> git push - envia modificações do repositorio LOCAL para o remoto</li>
 <li> git log - exibe no terminal os <i>commits </i> do repositorio na branch atual </li>
 <li> git log --online --all - exibe todos os commits de forma resumida</li>
 <li> git branch - lista de branches no repositorio</li>
