criação da pagina 2

--- a/webti/web.html
+++ b/webti/web.html
@@ -21,7 +21,7 @@
 <li> git log --online --all - exibe todos os commits de forma resumida</li>
 <li> git branch - lista de branches no repositorio</li>
 <li>git checkout - muda de branch </li>
-<li> git checkout -b <nome-da-branch> - cria e muda para uma nova branch</li>
+<li> git checkout -b  nome-da-branch  - cria e muda para uma nova branch</li>
 
 </ul>
     </body>
