adição de imagens

--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -18,5 +18,45 @@
 <span>aqui tem outro texto em span</span>
 
 
+<ul>
+<p> isto é um tipo de listagem</p>
+<span>
+        <li> item 1</li>
+        <li> item 2</li>
+        <li> item 3</li>
+</span>
+
+</ul>
+
+<ol> 
+    <p> este é outro tipo</p>
+    <span>
+
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </span>
+</ol>
+
+<span> 
+     lista de definição
+
+     <dl>
+        <dt>café</dt>
+        <dd><small>delicioso de mais rsrsrsr</small></dd>
+        <dl>caneca</dl>
+        <dd><small>serve pro café</small></dd>
+     </dl>
+
+</span>
+
+<div>
+<h2>imagens</h2>
+<img
+
+
+
+</div>
+
 </body>
 </html>
