--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title> Página 2</title>
+    <style>
+        img{
+            width: 200px;
+
+        }
+
+        p {color: crimson;}
+    </style>
 </head>
 <body>
     <h1>titulo nv 1</h1>
