--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -5,10 +5,14 @@
     <style>
         img{
             width: 200px;
+            border: 1px solid black;
 
         }
 
-        p {color: crimson;}
+        p {color: crimson;
+        background-color: black;
+    font-size: 20pt;
+}
     </style>
 </head>
 <body>
