--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -6,7 +6,14 @@
         img{
             width: 200px;
             border: 1px solid black;
+            border-radius: 50%;
+            box-shadow: 0 0 10px crimson;
 
+
+        }
+        img:hover{
+   box-shadow: 0 0 10px gray;
+   width: 300px;
         }
 
         p {color: crimson;
