criação de tabelas

--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -77,6 +77,49 @@
 
 
 </div>
+<div> 
+<h2> tabelas em html</h2>
+
+<table> 
+<tr>
+    <td>item </td>
+    <td>descrição</td>
+    <td>quantidade</td>
+    <td>preço</td>
+</tr>
+
+<tr> 
+    <td>1</td>
+    <td>carne</td>
+    <td>1kg</td>
+    <td>R$ 40,00</td>
+</tr>
+
+<tr> 
+    <td>2</td>
+    <td>linguiça</td>
+    <td>1kg</td>
+    <td>R$ 44,00</td>
+</tr>
+
+<tr> 
+    <td>3</td>
+    <td>frango</td>
+    <td>1kg</td>
+    <td>R$ 20,00</td>
+</tr>
+
+<tr> 
+    <td>4</td>
+    <td>pao de alho</td>
+    <td>1 pacote</td>
+    <td>R$ 10,99</td>
+</tr>
+
+</table>
+
+
+</div>
 
 </body>
 </html>
