--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -20,6 +20,11 @@
         background-color: black;
     font-size: 20pt;
 }
+
+table, tr, td{
+border: 1px solid black;
+border-collapse: collapse;
+}
     </style>
 </head>
 <body>
