mais alguns comandos pro git

--- a/webti/web.html
+++ b/webti/web.html
@@ -13,6 +13,8 @@
 <ul>
 
 <li> git init - cria um repositorio em uma pasta vazia</li>
+<li> <b>git clone</b> - clona um repositorio</li>
+<li><b>git diff</b> - exibe a diferença entre versões de repositorio</li>
 <li> git add - adiciona modificações do wk no <i> stage</i></li>
 <li>git status - mostra o estado atual dos repositórios, modificações, arquivos versionados</li>
 <li> git commit - cria um commit no repositorio LOCAL</li>
@@ -22,6 +24,7 @@
 <li> git branch - lista de branches no repositorio</li>
 <li>git checkout - muda de branch </li>
 <li> git checkout -b  nome-da-branch  - cria e muda para uma nova branch</li>
+
 
 </ul>
     </body>
