--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -21,19 +21,23 @@
     font-size: 20pt;
 }
 
-table, tr, td{
+table, tr, td, th{
 border: 1px solid black;
 border-collapse: collapse;
 }
     </style>
 </head>
 <body>
+
+    <i-- comentario -->
     <h1>titulo nv 1</h1>
     <h2>titulo nv 2</h2>
     <h3>titulo nv 3</h3>
     <h4>titulo nv 4</h4>
     <h5>titulo nv 5</h5>
     <h6>titulo nv 6</h6>
+
+    
 
 <p> este é um exemplo de parágrafo</p>
 <p>aqui tem mais um parágrafo</p>
@@ -81,16 +85,17 @@ border-collapse: collapse;
 
 
 
+
 </div>
 <div> 
 <h2> tabelas em html</h2>
 
 <table> 
 <tr>
-    <td>item </td>
-    <td>descrição</td>
-    <td>quantidade</td>
-    <td>preço</td>
+    <th>item </th>
+    <th>descrição</th>
+    <th>quantidade</th>
+    <th>preço</th>
 </tr>
 
 <tr> 
@@ -127,5 +132,15 @@ border-collapse: collapse;
 
 </div>
 
+<div>
+    <h2>formulario</h2>
+    <p>texto maneiro olha o formulario</p>
+    <label for="nomeusuario">digite seu nome</label>
+    <input id="nomeusuario" type="text">
+    <input type="color">
+    <br>
+    <label for="cor">cor cachaça</label>
+    <input id-="cor" type="color">
+</div>
 </body>
 </html>
