--- a/webti/web.html
+++ b/webti/web.html
@@ -15,7 +15,7 @@
 <li> git init - cria um repositorio em uma pasta vazia</li>
 <li> <b>git clone</b> - clona um repositorio</li>
 <li><b>git diff</b> - exibe a diferença entre versões de repositorio</li>
-<li> git add - adiciona modificações do wk no <i> stage</i></li>
+<li><b> git add </b>- adiciona modificações do wk no <i> stage</i></li>
 <li>git status - mostra o estado atual dos repositórios, modificações, arquivos versionados</li>
 <li> git commit - cria um commit no repositorio LOCAL</li>
 <li> git push - envia modificações do repositorio LOCAL para o remoto</li>
