--- a/webti/pagina2.html
+++ b/webti/pagina2.html
@@ -135,12 +135,47 @@ border-collapse: collapse;
 <div>
     <h2>formulario</h2>
     <p>texto maneiro olha o formulario</p>
+    <form action="">
     <label for="nomeusuario">digite seu nome</label>
     <input id="nomeusuario" type="text">
     <input type="color">
     <br>
     <label for="cor">cor cachaça</label>
     <input id-="cor" type="color">
+    <br>
+    <label for="nascimento"> sua data de nascimento</label>
+    <input id="nascimento" type="date">
+    <br>
+    <label for="email">seu email</label> 
+    <input id="email" type="email">
+    <br>
+    <label for="endereco">seu endereço</label>
+    <input id="endereco" type="text">
+    <br>
+    <label for="observacao">observações importantes</label>
+    <textarea id="observacao" type="text"></textarea>
+    <br>
+
+    <input  type="button" value="confirma">
+
+    </form>
+
+
+    <form action="https://google.com/search" 
+    method="get">
+        
+<h2>busca</h2>
+
+<label for="key">entre com um termo</label>
+<input type="text" id="key" name="q">
+<input type="submit" value="enviar">
+<button>buscar</button>
+
+
+    </form>
+
+
+
 </div>
 </body>
 </html>
