--- a/webti/pagina3.html
+++ b/webti/pagina3.html
@@ -7,10 +7,19 @@
 </head>
 <body>
 
-<p> Utilizando CSS </p>
+<h1> Utilizando CSS </h1>
 
+<p> O css é um documento de estilização em cascata criado em 1993, com sua primeira versão amplamente utilizada
+    em 1996. A linguagem Css permite definir regras que definem caracateristicas para os elementos HTML como cor, borda e comportamentos, além 
+    de animações e transições</p>
+<p>ao longo dos anos o css evoluiu e hoje temos o CSS 1, 2 e 3, cada uma das versões adicionou novos recursos que eram demandados no periodo</p>
 
-
+<ol type="1">
+    <li><b>CSS 1 -</b> prioridades básicas e formatação além de posicionamento dos elementos html com propriedades float e position</li>
+    <Li><b>CSS 2 2008 -</b> adição de propriedades de animação, transição e melhoria do position </Li>
+    <Li><b>CSS 3 2008 -</b>incremento gradual de novas funcionalidades do CSS com animação e ferramentas de posicionamento como
+    display:flex (2008) e grid(2013)</Li>
+</ol>
 
 
     
